# socmed

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  backend.cabal  hie.yaml  swagger.json
app/: Main.hs
backend/: backend.cabal
frontend/: .eslintrc  .gitignore  .stylelintrc  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/@types/: global.d.ts
frontend/api/: index.js.map
frontend/pages/: _app.tsx  index.tsx
frontend/src/shared/components/Button/: Button.tsx  index.ts  interface.ts  style.module.css
frontend/src/shared/components/Checkbox/: Checkbox.tsx  index.ts  interface.ts  style.module.css
frontend/src/shared/components/Input/: Input.tsx  index.ts  interface.ts  style.module.css
frontend/src/shared/components/TextLink/: TextLink.tsx  index.ts  interface.ts  style.module.css
frontend/src/shared/components/Toggle/: Toggle.tsx  index.ts  style.module.css
frontend/src/shared/helpers/: getClassName.ts
frontend/src/shared/styles/: fonts.css  util.module.css  variables.css
src/: App.hs  Server.hs
src/DB/: Entities.hs  Query.hs  Utils.hs
src/Server/: Entities.hs  Handler.hs  Schema.hs  Types.hs
src/Server/Auth/: Handler.hs  JWT.hs
src/Server/Handler/: Articles.hs  Auth.hs  Categories.hs  Post.hs  Users.hs
